# webcface-tools

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  default.nix  example.toml  meson.build  meson.options
.github/workflows/: cmake-build.yml  cmake-test-linux-gcc.yml  cmake-test-linux-nix.yml  cmake-test-macos-clang.yaml  cmake-test-windows-msvc.yml  cmake-test.yml
common/: common.h  cv2imgframe.h  logger_sink.h
cv-capture/: CMakeLists.txt  main.cc  meson.build
joystick/: CMakeLists.txt  joystick.cc  list.cc  main.cc  main.h  meson.build  select.cc
launcher/: CMakeLists.txt  command.cc  command.h  launcher.cc  launcher.h  main.cc  meson.build
ls/: CMakeLists.txt  elements.cc  find_field.h  list.cc  main.cc  main.h  meson.build  parse_field_arg.h  short.cc
mjcf/: body.cc  body.h  common.cc  geom.cc  main.cc  main.h  meson.build
notepad/: main.cc  meson.build
scripts/: webcface-launcher.service.in
scripts/cross/: msvc_arm64  msvc_x64  msvc_x86
send/: CMakeLists.txt  main.cc  meson.build
subprojects/: ftxui.wrap  tiny-process-library.wrap  webcface.wrap
tui/: CMakeLists.txt  color.h  components.h  func.h  main.cc  meson.build  status.h  text.cc  text.h  value.cc  value.h  view.cc  view.h
viewer/: display.cc  main.cc  main.h
